Implement email notifications and update network configurations
Added email notifications for creating accounts with high privileges through the auditing aspect. Networks were updated in the docker-compose file for all services to use a common network. Also, extended mail related configurations in application.yml and updated RabbitMQ configurations.